Added dockerfile and kubes