@@ -17,9 +17,8 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 @SpringBootTest(webEnvironment= WebEnvironment.RANDOM_PORT)
 @ContextConfiguration(classes = {
@@ -33,13 +32,12 @@ public class GestiuneFunctionalTest {
 
   @Test
   void verifyE2EFlow() throws Exception {
-    File initialFile = new File("src/test/resources/json/maximal-market");
-    InputStream jsonStream = new FileInputStream(initialFile);
+    String path = "src/test/resources/json/maximal-market";
 
     MvcResult result =
         mvc.perform(post("/market")
             .contentType(MediaType.APPLICATION_JSON)
-            .content(new String(jsonStream.readAllBytes())))
+            .content(new String(Files.readAllBytes(Paths.get(path)))))
             .andExpect(status().isCreated())
             .andReturn();
 
@@ -49,7 +47,7 @@ public class GestiuneFunctionalTest {
     mvc.perform(get("/market/{id}", 1))
         .andExpect(status().isOk())
         .andExpect(mvcResult ->
-            mvcResult.getResponse().getContentAsString().equals(new String(jsonStream.readAllBytes())))
+            mvcResult.getResponse().getContentAsString().equals(new String(Files.readAllBytes(Paths.get(path)))))
         .andReturn();
   }
 
